Add debug environment setup script for development workflow

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
       ]
     }
   },
-  "postCreateCommand": "dotnet restore",
+  "postCreateCommand": "dotnet restore && ./scripts/setup-debug-path.sh",
   "remoteUser": "vscode",
   "updateContentCommand": "dotnet build",
   "mounts": [
