fix race condition on `Run two cycod instances sequentially and verify separate log files` test where cycodmd may find one file before the other...

--- a/tests/cycod-yaml/logger/multiple-log-instances-tests.yaml
+++ b/tests/cycod-yaml/logger/multiple-log-instances-tests.yaml
@@ -23,9 +23,9 @@ tests:
       cycodmd multi-test-*.log
     expect-regex: |
       Version:
-      ## multi-test-1\.log
+      ## multi-test-[12]\.log
       File logger initialized with file:
-      ## multi-test-2\.log
+      ## multi-test-[12]\.log
       File logger initialized with file:
     not-expect-regex: |
       ## exception-log-.*\.log
