--- a/.github/workflows/ci-junit.yml
+++ b/.github/workflows/ci-junit.yml
@@ -1,14 +1,15 @@
-name: CI
+name: CI - JUnit
 
 on:
   schedule:
     # Run at midnight UTC every day
     - cron: '0 0 * * *'
   push:
-    branches: [ main, master ]
+    branches: [ main, master, dorny-failure ]
   pull_request:
     branches: [ main, master ]
-  workflow_dispatch:
+  workflow_dispatch: 
+    
     # Allow manual triggering
 
 jobs:
