--- a/src/cycod/cycod.csproj
+++ b/src/cycod/cycod.csproj
@@ -28,6 +28,11 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <!-- Platform-specific compilation symbols -->
+  <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('windows'))">
+    <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Anthropic.SDK" Version="5.4.1" />
     <PackageReference Include="AWSSDK.Extensions.Bedrock.MEAI" Version="4.0.1.1" />
