Add screenshot tool and /screenshot slash command (#70)
* Add implementation plan for screenshot feature in todo/

* Implement screenshot feature

- Add ScreenshotHelper with Windows-only screenshot capture using Win32 APIs
- Add ScreenshotHelperFunctions AI tool for screenshot capture
- Add SlashScreenshotCommandHandler for /screenshot slash command
- Register both tool and slash command in ChatCommand
- Update help text to include /screenshot command
- Add System.Drawing.Common package dependency

* Improve VisionHeaderPolicy image detection for screenshot support

- Add comprehensive image content detection patterns
- Support modern OpenAI image_url format
- Add debug logging for troubleshooting
- Handle base64 encoded images and various media types

* Refactor ScreenshotHelperFunctions to accept ChatCommand instance and improve error handling in screenshot capture

* Add screenshot command to ChatCommand and improve error handling in ScreenshotHelperFunctions

* Address PR feedback: cleanup comments, spacing, conditional compilation, and file organization

- Remove comment from SlashScreenshotCommandHandler registration in ChatCommand.cs
- Fix accidental space in help text for /run command
- Add conditional compilation (#if WINDOWS) around TakeScreenshot function in ScreenshotHelperFunctions.cs
- Reorganize ScreenshotHelper.cs to move Windows interop (DllImport/constants) to bottom in region
- Remove todo/screenshot-feature-implementation-plan.md as no longer needed

--- a/src/cycod/cycod.csproj
+++ b/src/cycod/cycod.csproj
@@ -28,6 +28,11 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <!-- Platform-specific compilation symbols -->
+  <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('windows'))">
+    <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Anthropic.SDK" Version="5.4.1" />
     <PackageReference Include="AWSSDK.Extensions.Bedrock.MEAI" Version="4.0.1.1" />
@@ -41,6 +46,7 @@
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
