Update test-cycodt-timeout.yaml for matrix expansion
Matrix tests now generate 3 separate tests instead of 1, so updated
expectations: 'Found 3 tests' and test names include matrix parameters.

--- a/tests/cycodt-yaml/inception-layer-1-tests/test-cycodt-timeout.yaml
+++ b/tests/cycodt-yaml/inception-layer-1-tests/test-cycodt-timeout.yaml
@@ -5,17 +5,19 @@ tests:
   run: cycodt run --file simple5.yaml --include-optional check-timeouts --output-file test-results-simple5.trx
   expect-exit-code: 1
   expect-regex: |
-    ^Found 1 test\.\.\.
-    Starting test: yaml.simple5.simple5::timeouts@[0-9a-f]{6}\r?$\n
-    ^Passed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\r?$\n
-    ^Failed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\r?$\n
+    ^Found 3 tests\.\.\.
+    Starting test: yaml.simple5.simple5::timeouts@[0-9a-f]{6}\[sleep=1,timeout=1500\]\r?$\n
+    ^Passed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\[sleep=1,timeout=1500\]\r?$\n
+    ^Starting test: yaml.simple5.simple5::timeouts@[0-9a-f]{6}\[sleep=2,timeout=1500\]\r?$\n
+    ^Failed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\[sleep=2,timeout=1500\]\r?$\n
     ^at .*cycodt-yaml[\\/]inception-layer-1[\\/]simple5\.yaml\(5\)\r?$\n
     ^echo sleeping for 2 seconds - timeout after 1500 seconds\r?$\n
     ^sleep 2\r?$\n
     ^echo done sleeping\r?$\n
     ^EXIT CODE: \(did not exit; timedout; killed\)\r?$\n
     ^\r?$\n
-    ^Failed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\r?$\n
+    ^Starting test: yaml.simple5.simple5::timeouts@[0-9a-f]{6}\[sleep=3,timeout=1500\]\r?$\n
+    ^Failed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\[sleep=3,timeout=1500\]\r?$\n
     ^at .*cycodt-yaml[\\/]inception-layer-1[\\/]simple5\.yaml\(5\)\r?$\n
     ^echo sleeping for 3 seconds - timeout after 1500 seconds\r?$\n
     ^sleep 3\r?$\n
@@ -24,14 +26,14 @@ tests:
     ^\r?$\n
     ^\r?$\n
     ^FAILURE SUMMARY:\r?$\n
-    ^Failed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\r?$\n
+    ^Failed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\[sleep=2,timeout=1500\]\r?$\n
     ^at .*cycodt-yaml[\\/]inception-layer-1[\\/]simple5\.yaml\(5\)\r?$\n
     ^echo sleeping for 2 seconds - timeout after 1500 seconds\r?$\n
     ^sleep 2\r?$\n
     ^echo done sleeping\r?$\n
     ^EXIT CODE: \(did not exit; timedout; killed\)\r?$\n
     ^\r?$\n
-    ^Failed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\r?$\n
+    ^Failed \(.*\): yaml.simple5.simple5::timeouts@[0-9a-f]{6}\[sleep=3,timeout=1500\]\r?$\n
     ^at .*cycodt-yaml[\\/]inception-layer-1[\\/]simple5\.yaml\(5\)\r?$\n
     ^echo sleeping for 3 seconds - timeout after 1500 seconds\r?$\n
     ^sleep 3\r?$\n
