Rename file tools for clarity and add ViewFiles wrapper
- Rename FindInFiles  SearchInFiles (clearer search intent)
- Rename StrReplace  ReplaceOneInFile (explicit uniqueness constraint)
- Add ViewFiles function for reading multiple files without searching
- Update all documentation, tests, and system prompts
- Improves tool discoverability and reduces naming confusion

The new naming creates clear families:
- View* (ViewFile, ViewFiles) - reading/browsing
- Find* (FindFiles) - locating files
- Search* (SearchInFiles) - finding content
- Replace* (ReplaceOneInFile, ReplaceAllInFiles) - modifying

--- a/tests/cycod-yaml/bulk-replacement-tests.yaml
+++ b/tests/cycod-yaml/bulk-replacement-tests.yaml
@@ -39,7 +39,7 @@ tests:
   - name: AI uses ReplaceAllInFiles with git diff style output
     optional: needsAI
     run: |
-      cycod --input "preview replacing 'FindInFiles' with 'SearchInFiles' in documentation files" --auto-approve *
+      cycod --input "preview replacing 'SearchInFiles' with 'FindContentInFiles' in documentation files" --auto-approve *
     expect-regex: |
       assistant-function: ReplaceAllInFiles
       ## .*\.(md|txt)
