feat: Complete cycodgr (GitHub search CLI) - Phases 1-5 implemented
- Renamed cycodgh -> cycodgr ('dig for' repos and code)
- Implemented two-verb structure: 'repo' and 'code' commands
- Added comprehensive filtering: --owner, --min-stars, --exclude-fork, --only-forks
- Implemented detailed code output format with line numbers and context markers
- Added --lines parameter for controlling context (0-N lines before/after matches)
- Implemented save shortcuts: --save-json, --save-csv, --save-urls, --save-table
- Added repository targeting: --repo, --repos (including @file support)
- Implemented URL filtering: --exclude with regex patterns
- Created comprehensive help system with 12 help topics following cycodmd pattern
- Help topics include working examples tested against GitHub API
- AMA (Ask Me Anything) AI-powered help feature fully functional
- Fixed --lines bug where parameter was ignored in output formatting
- All examples use realistic, valuable searches (OAuth, JWT, Aspire, GitHub Actions, etc.)

Breaking changes from cycodgh:
- Removed single 'search' command
- Split into 'repo' and 'code' verbs
- Default format changed from 'url' to 'detailed' for both commands

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ tests/cycodt-yaml/inception-layer-1/test-results-simple?.trx
 # Test cloned repos
 temp/external/
 temp/test-repos/
+src/cycodgr/bin/
+src/cycodgr/obj/
