feat: Add cycodgr to NuGet packaging and CI/CD pipeline
- Updated cycodgr.csproj with proper NuGet package metadata
- Added cycodgr to build scripts (_functions.sh)
- Added cycodgr to pack and publish pipelines
- Updated CI/CD workflows to include cycodgr in PATH
- Updated release.yml to include cycodgr packages in release assets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,9 +59,10 @@ jobs:
     
     - name: Run cycodt tests
       run: |
-        export PATH=$PATH:$(pwd)/src/cycod/bin/Release/net9.0:$(pwd)/src/cycodt/bin/Release/net9.0:$(pwd)/src/cycodmd/bin/Release/net9.0
+        export PATH=$PATH:$(pwd)/src/cycod/bin/Release/net9.0:$(pwd)/src/cycodt/bin/Release/net9.0:$(pwd)/src/cycodmd/bin/Release/net9.0:$(pwd)/src/cycodgr/bin/Release/net9.0
         which cycod
         which cycodmd
+        which cycodgr
         which cycodt
         cycodt run --log ./TestResults/test-results-cycodt.log --output-file ./TestResults/test-results-cycodt.trx
     
