--- a/src/cycodgr/cycodgr.csproj
+++ b/src/cycodgr/cycodgr.csproj
@@ -17,9 +17,9 @@
     <!-- NuGet Package Properties -->
     <PackageId>CycoGr</PackageId>
     <Authors>Rob Chambers</Authors>
-    <Description>GitHub Search and Repository Management CLI</Description>
-    <PackageTags>cli;github;search;git;repository</PackageTags>
-    <PackageProjectUrl>https://github.com/robch/cycod</PackageProjectUrl>
+    <Description>GitHub repository and code search CLI tool - dig for repos and code on GitHub</Description>
+    <PackageTags>cli;github;search;code-search;repository-search;git;gh</PackageTags>
+    <PackageProjectUrl>https://github.com/robch/cycod-cycodgh-github-search</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     
