Add native macOS screenshot support using Core Graphics
- Add OSX and LINUX compilation symbols to cycod.csproj
- Implement native macOS screenshot capture using Core Graphics framework
- Add P/Invoke declarations for CGDisplay, CoreFoundation, and ImageIO APIs
- Update platform support checks to include macOS alongside Windows
- Update error messages and descriptions to reflect macOS support
- Maintain proper memory management with CFRelease for Core Foundation objects

The implementation uses native macOS APIs without external dependencies:
- CGDisplayCreateImage for screen capture
- CGImageDestination for PNG export
- CFURL and CFString for file path handling

Tested: Build succeeds with no errors or warnings

--- a/src/cycod/cycod.csproj
+++ b/src/cycod/cycod.csproj
@@ -32,6 +32,14 @@
   <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('windows'))">
     <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
   </PropertyGroup>
+  
+  <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('osx'))">
+    <DefineConstants>$(DefineConstants);OSX</DefineConstants>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('linux'))">
+    <DefineConstants>$(DefineConstants);LINUX</DefineConstants>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Anthropic" Version="11.0.0" />
