--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ tests/cycodt-yaml/inception-layer-1/test-results-simple.trx
 tests/cycodt-yaml/inception-layer-1/test-results-simple?.trx
 *.log
 .vscode/settings.json
+
+obj/
